--- a/WOTAPI.WebMVC/Views/Book/Details.cshtml
+++ b/WOTAPI.WebMVC/Views/Book/Details.cshtml
@@ -33,13 +33,19 @@
         <dd>
             @Html.DisplayFor(model => model.PageCount)
         </dd>
-        <div class="form-group">
+        <dt>
+            @Html.DisplayNameFor(model => model.Chapters)
+        </dt>
+        <dd>
+            @Html.DropDownList("ChapterId", null, htmlAttributes: new { @class = "form-control" })
+        </dd>
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Chapters, "ChapterId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ChapterId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Chapters, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
     </dl>
 </div>
 <p>
