--- a/WOTAPI.WebMVC/Views/Shared/_Layout.cshtml
+++ b/WOTAPI.WebMVC/Views/Shared/_Layout.cshtml
@@ -17,12 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("WOTAPI", "Index", "Book", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Chapters", "Index", "Chapter")</li>
+                    <li>@Html.ActionLink("Characters", "Index", "Character")</li>
+                    <li>@Html.ActionLink("Nations", "Index", "Nation")</li>
+
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
